--- a/lib/Jifty/Manual/AccessControl.pod
+++ b/lib/Jifty/Manual/AccessControl.pod
@@ -1,12 +1,12 @@
 =head1 NAME
 
-JFDI::Manual::AccessControl
+Jifty::Manual::AccessControl
 
 =head2 DESCRIPTION
 
 
-Out of the box JFDI-based applications have an ACL system.  The system 
-automatically validates ACLs on JFDI::Record objects by calling the method
+Out of the box Jifty-based applications have an ACL system.  The system 
+automatically validates ACLs on Jifty::Record objects by calling the method
 C<current_user_can> before any create, read, update, or delete operation.
 In all cases, the arguments passed to the CRUD operation are passed as 
 extra arguments to current_user_can.
@@ -21,7 +21,7 @@ On C<_set()> or C<I<set_somefieldname>>, we reject the operation  if C<current_u
 
 On C<delete()>, we reject the operation  if C<current_user_can('delete')> returns false.
 
-Out of the box, C<current_user_can> returns 1. When you want to actually check ACLs, you'll need to override C<current_user_can()> in your C<JFDI::Record> subclass.
+Out of the box, C<current_user_can> returns 1. When you want to actually check ACLs, you'll need to override C<current_user_can()> in your C<Jifty::Record> subclass.
 
 It's likely that at some point, you'll decide you want to ask other
 questions on certain types of operation.  Say, you only want to let
