--- a/lib/Jifty/Manual/Glossary.pod
+++ b/lib/Jifty/Manual/Glossary.pod
@@ -1,6 +1,6 @@
 =head1 NAME
 
-JFDI::Glossary
+Jifty::Glossary
 
 =head1 GLOSSARY
 
@@ -25,7 +25,7 @@ Generally, an action takes L</argument>, which are represented as L</form field>
 
 =item moniker
 
-Every instance of an action (and other types of JFDI objects, too) has 
+Every instance of an action (and other types of Jifty objects, too) has 
 a B<moniker>.  A moniker is an arbitrary-length nonempty string containing
 no semicolons.  Monikers need not be globally unique, but they must be unique
 within a single request.  Monikers have no semantic meaning.
