--- a/lib/Jifty/Glossary.pod
+++ b/lib/Jifty/Glossary.pod
@@ -14,22 +14,43 @@ An action is a specifically designed RPC call that can do something to the syste
 
 Generally, an action takes L</argument>, which are represented as L</form field>s via the web UI
 
-
 =item active
+
+Arguments can be active
+
+=item argument
+
+Things that actions take
 
 =item AJAX
 
 =item constructor
 
+A property an L</argument>; action B<must> have a value submitted for
+this argument in order to be constructed.  This is different from
+L</mandatory>, in that mandatory fields can be left empty by the user.
+For instance, the C<id> of a L<Jifty::Action::Record::Update> is a
+constructor.
+
 =item mandatory
+
+A property an L</argument>; the user must enter a value for the action
+to validate.  This is the simplest level of validation.
 
 =item moniker
 
-Every instance of an action (and other types of Jifty objects, too) has 
-a B<moniker>.  A moniker is an arbitrary-length nonempty string containing
-no semicolons.  Monikers need not be globally unique, but they must be unique
-within a single request.  Monikers have no semantic meaning.
+Every instance of a L<Jifty::Action> has a B<moniker>.  A moniker is
+an arbitrary-length nonempty string containing no semicolons.
+Monikers need not be globally unique, but they must be unique within a
+single request.  Monikers have no semantic meaning.
 
 =item request
 
+=item sticky
+
+Values that the user entered into a form element are placed back there
+when the page is rendered.
+
 =back
+
+=cut
